--- a/src/components/Snake/Snake.css
+++ b/src/components/Snake/Snake.css
@@ -1,68 +1,81 @@
-#GameBoard {
-	position: relative;
-	margin: auto;
-	border-style: solid;
-}
-
-#GameBoard .Block {
-    position: absolute;
-    z-index: 10;
-}
-
-#GameBoard #GameOver {
-	text-align: center;
-	height: 100%;
-	flex-direction: column;
-	display: flex;
-	justify-content: space-around;
-}
-
-#GameBoard #Score {
-	position: relative;
-	top: 105%;
-	text-align: center;
-	font-weight: bold;
-}
-
-#GameBoard #GameOverText {
-	color: #ca0000;
-	font-weight: bold;
-	text-decoration-line: underline;
-}
-
-#GameBoard #PressSpaceText {
-	color: #2e7ecb;
-	font-weight: bold;
-}
-
-/* Control Buttons */
-@import 'https://fonts.googleapis.com/css?family=Press+Start+2P';
-
-.controls {
-  margin-top: 80%;
-  display: flex;
-  order: 2;
-}
-
-.control-button {
-  width: 50px;
-  height: 50px;
-  background-color: #d58e5e;
-  margin: 0px auto;
-  color: #9b4637;
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  transition: s background-color ease, 0.5s color ease;
-  box-shadow: 0px 5px 0px #9b4637;
+body {
+  background-color: aqua;
   text-align: center;
 }
 
-.control-button:hover {
-  background-color: #9b4637;
-  color: #d58e5e;
+#GameBoard {
+  position: relative;
+  margin: auto;
+  border-style: solid;
 }
 
-.control-button i {
-  margin: 0 auto;
+#GameBoard .Block {
+  position: absolute;
+  z-index: 10;
+}
+
+#GameBoard #GameOver {
+  text-align: center;
+  height: 100%;
+  flex-direction: column;
+  display: flex;
+  justify-content: space-around;
+}
+
+#GameBoard #Score {
+  position: relative;
+  top: 105%;
+  text-align: center;
+  font-weight: bold;
+}
+
+#GameBoard #GameOverText {
+  color: #ca0000;
+  font-weight: bold;
+  text-decoration-line: underline;
+}
+
+#GameBoard #PressSpaceText {
+  color: #2e7ecb;
+  font-weight: bold;
+}
+
+.controls {
+  display: none
+}
+
+@import "https://fonts.googleapis.com/css?family=Press+Start+2P";
+
+@media only screen and (max-width: 800px) {
+  .controls {
+    display: grid;
+    grid-template-columns: auto;
+    padding: 10px;
+    margin-top: 80%;
+    display: flex;
+    order: 2;
+  }
+
+  .control-button {
+    width: 50px;
+    height: 50px;
+    background-color: #d58e5e;
+    margin: 0px auto;
+    color: #9b4637;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    transition: s background-color ease, 0.5s color ease;
+    box-shadow: 0px 5px 0px #9b4637;
+    text-align: center;
+  }
+
+  .control-button:hover {
+    background-color: #9b4637;
+    color: #d58e5e;
+  }
+
+  .control-button i {
+    margin: 0 auto;
+  }
 }
